--- a/header.css
+++ b/header.css
@@ -7,7 +7,7 @@
 }
 
 .header-nav {
-  float: right;
+  float: left;
   vertical-align: baseline;
   line-height: 36px;
   padding: 0 20px;
@@ -20,8 +20,37 @@
   display: inline-block;
 }
 
+.header-nav-item:hover {
+  cursor: pointer;
+}
+
 .header-nav-link {
   text-decoration: none;
   color: gray;
   font-weight: bold;
+}
+
+.header-nav-link {
+  color: #333;
+}
+
+@media (max-width: 640px) {
+  .header {
+    position: inherit;
+    width: auto;
+    background: #fff;
+    top: auto;
+    opacity: 1;
+  }
+
+  .header-nav {
+    float: none;
+  }
+
+}
+
+@media (max-width: 360px) {
+  .header-nav-item {
+    display: block;
+  }
 }
